@@ -1,4 +1,26 @@
-include $(top_srcdir)/build-aux/init.mk
+#                                                                -*-Automake-*-
+# Copyright (C) 2009 by Thomas Moulard, AIST, CNRS, INRIA.
+# This file is part of the roboptim.
+#
+# roboptim is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# Additional permission under section 7 of the GNU General Public
+# License, version 3 ("GPLv3"):
+#
+# If you convey this file as part of a work that contains a
+# configuration script generated by Autoconf, you may do so under
+# terms of your choice.
+#
+# roboptim is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with roboptim.  If not, see <http://www.gnu.org/licenses/>.
 
 # ------- #
 # CAUTION #
@@ -9,13 +31,20 @@ include $(top_srcdir)/build-aux/init.mk
 # (see rpmbuild documentation).
 # Set RPM_TREE to this directory. You will need write access
 # to this directory.
-# Hint: on Gentoo RPM_TREE is ``/usrc/src/rpm'' and on Red Hat
-#       ``/usr/src/redhat''.
+# Hint:
+# - on Gentoo RPM_TREE is ``/usrc/src/rpm''
+# - on Red Hat ``/usr/src/redhat''
+# - on Fedora ``$HOME/rpmbuild''
 
 RPMBUILD = rpmbuild
 
-SPECFILE = $(PACKAGE).spec
-EXTRA_DIST += $(SPECFILE)
+SPECFILE = @PACKAGE_TARNAME@.spec
+EXTRA_DIST += @PACKAGE_TARNAME@.spec.in
+
+# Files to be removed by cleaning rule.
+CLEANFILES +=				\
+	$(SPECFILE)
+
 
 .PHONY: install-rpm install-rpm-tree install-rpm-tarball src-rpm rpm
 
@@ -45,9 +74,13 @@ install-rpm-tarball:
 	cp $(top_builddir)/$(PACKAGE)-$(VERSION).tar.gz $$RPM_TREE/SOURCES
 
 # Build source RPM
-src-rpm: install-rpm $(srcdir)/$(SPECFILE)
-	$(RPMBUILD) -bs $(srcdir)/$(SPECFILE)
+src-rpm: install-rpm $(SPECFILE)
+	$(RPMBUILD) -bs $(SPECFILE)
 
 # Build binary RPM
-rpm: install-rpm $(srcdir)/$(SPECFILE)
-	$(RPMBUILD) -bb $(srcdir)/$(SPECFILE)
+rpm: install-rpm $(SPECFILE)
+	$(RPMBUILD) -bb $(SPECFILE)
+
+# Generate spec file.
+@PACKAGE_TARNAME@: @PACKAGE_TARNAME@.in
+	$(top_builddir)/config.status --file="$@":"$<"
